--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,15 @@ a {
   text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Staatliches", cursive;
+}
+
 /* Container */
 .container {
   max-width: var(--max-width);
@@ -87,4 +96,92 @@ a {
 #main-nav ul li a:hover {
   background-color: var(--light-color);
   color: #333;
+}
+
+/* Category */
+.category {
+  display: inline-block;
+  border: none;
+  border-radius: 15px;
+  background-color: var(--primary-color);
+  color: #fff;
+  padding: 0.4rem 0.6rem;
+  text-transform: uppercase;
+  font-size: 0.55rem;
+  margin-bottom: 0.5rem;
+}
+
+.category-sports {
+  background-color: var(--sports-color);
+}
+.category-ent {
+  background-color: var(--ent-color);
+}
+.category-tech {
+  background-color: var(--tech-color);
+}
+
+/* Buttons */
+.btn {
+  display: inline-block;
+  border: none;
+  color: #fff;
+  background-color: var(--dark-color);
+  padding: 0.5rem 0.7rem;
+  transition: all 1s ease;
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+
+.btn-primary {
+  background-color: var(--primary-color);
+}
+.btn-secondary {
+  background-color: var(--secondary-color);
+}
+.btn-light {
+  background-color: var(--light-color);
+}
+
+.btn:hover {
+  opacity: 0.9;
+}
+
+/* Showcase */
+#showcase {
+  color: #fff;
+  background-color: #333;
+  padding: 2rem;
+  position: relative;
+}
+
+#showcase:before {
+  content: "";
+  position: absolute;
+  background: url("../img/featured.jpg") no-repeat center center/cover;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0.4;
+}
+
+#showcase .showcase-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
+
+#showcase .showcase-content {
+  z-index: 1;
+}
+
+#showcase .showcase-content p {
+  margin-bottom: 1rem;
 }
