--- a/css/style.css
+++ b/css/style.css
@@ -42,12 +42,37 @@ h6 {
   font-family: "Staatliches", cursive;
 }
 
+img {
+  width: 100%;
+}
+
 /* Container */
 .container {
   max-width: var(--max-width);
   margin: auto;
   padding: 0 2rem;
   overflow: hidden;
+}
+
+/* Padding */
+.py-1 {
+  padding: 1.5rem 0;
+}
+.py-2 {
+  padding: 2rem 0;
+}
+.py-3 {
+  padding: 3rem 0;
+}
+
+.p-1 {
+  padding: 1.5rem;
+}
+.p-2 {
+  padding: 2rem;
+}
+.p-3 {
+  padding: 3rem;
 }
 
 /* Navbar */
@@ -184,4 +209,56 @@ h6 {
 
 #showcase .showcase-content p {
   margin-bottom: 1rem;
+}
+
+/* Card */
+.card {
+  background-color: #fff;
+  padding: 1rem;
+}
+
+/* Background Color */
+.bg-dark {
+  background-color: var(--dark-color);
+  color: #fff;
+}
+
+.bg-primary {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+
+.bg-dark h1,
+.bg-dark h2,
+.bg-dark h3,
+.bg-dark a,
+.bg-primary h1,
+.bg-primary h2,
+.bg-primary h3,
+.bg-primary a,
+.bg-secondary h1,
+.bg-secondary h2,
+.bg-secondary h3,
+.bg-secondary a {
+  color: #fff;
+}
+
+/* Articles */
+#home-articles .articles-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
+}
+
+#home-articles .articles-container > *:first-child,
+#home-articles .articles-container > *:last-child {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column: 1 / span 2;
+  align-items: center;
+  grid-gap: 1rem;
+}
+
+#home-articles .articles-container > *:last-child {
+  grid-column: 2 / span 2;
 }
