--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ img {
   width: 100%;
 }
 
+p {
+  padding: 0.5rem 0;
+}
+
 /* Container */
 .container {
   max-width: var(--max-width);
@@ -261,4 +265,63 @@ img {
 
 #home-articles .articles-container > *:last-child {
   grid-column: 2 / span 2;
+}
+
+/* Pages */
+.pages-container {
+  display: grid;
+  grid-template-columns: 5fr 2fr;
+  grid-gap: 1.5rem;
+  margin: 2rem 0;
+}
+
+.pages-container *:first-child {
+  grid-row: 1 / span 3;
+}
+
+/* Footer */
+#main-footer {
+  background-color: var(--dark-color);
+  color: #fff;
+}
+
+#main-footer img {
+  width: 150px;
+}
+
+#main-footer .footer-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1.5rem;
+}
+
+#main-footer .footer-container input[type="email"] {
+  width: 90%;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+#main-footer .footer-container button {
+  width: 90%;
+}
+
+#main-footer .list li {
+  border-bottom: #555 1px dotted;
+  padding: 0.5rem 0;
+}
+
+#main-footer .list li a {
+  color: #fff;
+}
+
+#main-footer .list li a:hover {
+  color: var(--secondary-color);
+}
+
+#main-footer .footer-container > *:last-child {
+  display: grid;
+  grid-column: 1 / span 4;
+  background-color: #555;
+  text-align: center;
+  padding: 0.75rem;
 }
