--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,25 @@ p {
   padding: 3rem;
 }
 
+/* Heading */
+.l-heading {
+  font-size: 3rem;
+}
+
+/* List */
+.list li {
+  border-bottom: #555 1px dotted;
+  padding: 0.5rem 0;
+}
+
+.list li a {
+  color: #555;
+}
+
+.list li a:hover {
+  color: var(--secondary-color);
+}
+
 /* Navbar */
 #main-nav {
   background-color: #fff;
@@ -232,6 +251,11 @@ p {
   color: #fff;
 }
 
+.bg-secondary {
+  background-color: var(--secondary-color);
+  color: #fff;
+}
+
 .bg-dark h1,
 .bg-dark h2,
 .bg-dark h3,
@@ -279,6 +303,19 @@ p {
   grid-row: 1 / span 3;
 }
 
+/* Pages Meta */
+#article .meta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+  background-color: #eee;
+}
+
+#article .meta .category {
+  margin-top: 0.4rem;
+}
+
 /* Footer */
 #main-footer {
   background-color: var(--dark-color);
@@ -295,6 +332,10 @@ p {
   grid-gap: 1.5rem;
 }
 
+#main-footer ul li a {
+  color: #fff !important;
+}
+
 #main-footer .footer-container input[type="email"] {
   width: 90%;
   padding: 0.5rem;
@@ -303,19 +344,6 @@ p {
 
 #main-footer .footer-container button {
   width: 90%;
-}
-
-#main-footer .list li {
-  border-bottom: #555 1px dotted;
-  padding: 0.5rem 0;
-}
-
-#main-footer .list li a {
-  color: #fff;
-}
-
-#main-footer .list li a:hover {
-  color: var(--secondary-color);
 }
 
 #main-footer .footer-container > *:last-child {
